Cleanup BindingGeneratorUtilTest
We have a number of tests which should be in binding-spec-util,
move them around.

Change-Id: I76900f1f0c87401cf6d4e0b84b8340edbd116f22
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>